//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  role Role [not null, default: 'USER']
  updatedAt DateTime [not null]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  accounts Account [not null]
  sessions Session [not null]
  UserDetails UserDetails [not null]
}

Table VerificationToken {
  id String [pk]
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table UserDetails {
  id String [pk]
  userId String [not null]
  notifications Notification [not null]
  name String [not null]
  username String [not null]
  gender Genders [not null]
  age Int [not null]
  orientation Genders [not null]
  relationshipType RelationshipType [not null]
  relationshipDynamic Dynamic [not null]
  hasChildren Boolean [not null]
  wantsChildren Boolean [not null]
  beenMarried Boolean [not null]
  wantsMarriage Boolean [not null]
  smokes Boolean [not null]
  drinks Boolean [not null]
  legalDrugs Boolean [not null]
  pets Boolean [not null]
  values String[] [not null]
  image String
  genderPref String[] [not null]
  agePref Int[] [not null]
  partnerKidsPref Boolean [not null]
  intro String [not null]
  bio String [not null]
  matches Match [not null]
  user User [not null]
}

Table Notification {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  read Boolean [not null]
  message String [not null]
  userDetailsId String [not null]
  userDetails UserDetails [not null]
}

Table Match {
  id String [pk]
  dateMatched DateTime [default: `now()`, not null]
  matchLevel Int [not null]
  badges String[] [not null]
  userDetailsId String [not null]
  userDetails UserDetails [not null]
}

Enum RelationshipType {
  casual
  shortTerm
  longTerm
  life
}

Enum Dynamic {
  open
  closed
}

Enum Genders {
  s
  h
  t
  o
}

Enum Role {
  USER
  ADMIN
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: UserDetails.userId > User.id [delete: Cascade]

Ref: Notification.userDetailsId > UserDetails.id [delete: Cascade]

Ref: Match.userDetailsId > UserDetails.id